engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-experience-desktop.scss
.customization-experience--desktop {
  height: 100%;
  .customization-panel {
    padding-top: 45px;

    &-container {
      max-width: 575px;
      margin: 0 auto;
    }
  }

  .title {
    align-items: center;
    display: flex;
    margin-bottom: 25px;

    .title-text {
      max-width: 240px;
      text-align: left;
    }

    .start-over {
      text-align: right;

      > button {
        position: absolute;
        top: 50%;
        right: 0;
        transform: translateY(-50%);
        z-index: 2;
        margin-right: 30px;
      }
    }

  }

  .customizations {

    .customization-type {
      height: 48px;
      margin: 25px auto;
      cursor: pointer;

      &:hover,
      &:focus {
        background-color: $white-three;
      }
    }

    .customization-column {
      display: table;
      height: 100%;

      a {
        letter-spacing: 2px;
        font-size: .85rem;
        font-weight: 700;
      }

      span {
        padding-left: 8px;
      }

      i,
      span {
        display: table-cell;
        vertical-align: middle;
      }

      &:first-child {
        text-align: left;
      }

      &:last-child {
        color: $boulder-two;
        font-size: .85rem;
        text-align: right;
      }

      &:hover,
      &:focus,
      &.selected {
        background-color: $white-three;
      }
    }

    .customization-column {
      display: table;
      height: 100%;

      a {
        letter-spacing: 2px;
        font-size: .85rem;
        font-weight: 700;
      }

      span {
        padding-left: 8px;
      }

      i,
      span {
        display: table-cell;
        vertical-align: middle;
      }

      &:first-child {
        text-align: left;
      }

      &:last-child {
        color: $boulder-two;
        font-size: .85rem;
        text-align: right;
      }
    }

  }

  .dress-preview {
    background-image: image-url('wedding-atelier/customization.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-bottom: 61px;
    height: 100%;
  }

  .footer {
    background-image: image-url('wedding-atelier/marbel.png');

    align-items: center;
    bottom: 0;
    display: flex;
    left: 0;
    height: 61px;
    padding: 8px;
    position: absolute;
    width: 100%;
  }

  .favorites {

    img {
      width: 20px;
      margin-right: 10px;
    }
  }

  .results {

    span {
      display: inline-block;
    }

    .sub-total {
      font-weight: 700px;
    }

    .left-result {
      text-align: left;
      padding-left: 50px;
      width: 70%;
    }

    .right-result {
      text-align: right;
      width: 30%;
    }

  }

  .actions {
    .btn-transparent {
      margin-right: 10px;
    }
  }

  @media screen and (min-width: $screen-sm-min) and (max-width: $screen-md-max) {

    .footer {
      justify-content: center;
    }

    .results {

      .left-result {
        padding-left: 0;
      }

    }

  }

  @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {

    .footer {
      justify-content: center;
    }

    .results {

      .left-result {
        padding-left: 0;
      }

    }

  }
}

